Fixed didplay of code on mobile

--- a/src/css/_desktop.scss
+++ b/src/css/_desktop.scss
@@ -156,7 +156,7 @@ blockquote {
 // container holds all the content within the <main> element
 // after header/brand and before footer
 .container {
-  max-width: 98%;
+  max-width: 98vw;
   margin-block-start: 1em;
   margin-inline: auto;
 }
